# Lapsora

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.planning/: config.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/migrations/: runner.py
backend/app/migrations/versions/: 001_initial.sql  002_notifications_health.sql  003_profile_templates.sql  004_clear_stale_encrypted_urls.sql  005_timelapse_schedules.sql  006_cleanup_schedules.sql  007_active_hours.sql  008_lookback_hours.sql  009_go2rtc.sql  010_weather.sql  011_deflicker.sql  012_schedule_overlays.sql  013_heatmap_threshold.sql  014_sun_events.sql  015_codec_resolution_quality.sql  016_motion_blur.sql  017_timelapse_thumbnails.sql  018_drop_heatmap_opacity.sql
backend/app/routers/: captures.py  cleanup_schedules.py  notifications.py  profile_templates.py  profiles.py  settings.py  statistics.py  streams.py  system.py  timelapse_schedules.py  timelapses.py
backend/app/services/: capture.py  capture_gap.py  deflicker.py  events.py  generation_progress.py  generation_queue.py  go2rtc.py  gpu.py  hdr.py  health.py  notifications.py  retention.py  rtsp.py  scheduler.py  timelapse.py  weather.py
backend/lapsora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_captures.py  test_config.py  test_health.py  test_profiles.py  test_retention.py  test_streams.py  test_timelapses.py
docker/: Dockerfile  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh
(+30 files in other folders)
