[project]
name = "lapsora"
version = "0.1.0"
description = "Self-hosted RTSP timelapse web application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.1",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "opencv-python-headless>=4.9",
    "pillow>=10.2",
    "aiofiles>=23.2",
    "python-multipart>=0.0.6",
    "apprise>=1.7",
    "sse-starlette>=2.0",
    "astral>=3.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
